tests/baselines/reference/asOperatorNames.errors.txt
tests/cases/conformance/expressions/asOperator/asOperatorNames.ts(2,9): error TS2352: Type 'number' cannot be converted to type 'string'.


==== tests/cases/conformance/expressions/asOperator/asOperatorNames.ts (1 errors) ====
    var a = 20;
    var b = a as string;
            ~~~~~~~~~~~
!!! error TS2352: Type 'number' cannot be converted to type 'string'.
    var as = "hello";
    var as1 = as as string;
    